# musical-waffle

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: binary_diagnostic.rs  dive.rs  giant_squid.rs  hydrothermal_venture.rs  lanternfish.rs  lib.rs  main.rs  seven_segment_search.rs  sonar_sweep.rs  the_treachery_of_whales.rs  utils.rs
tests/: tests.rs
